[gd_scene load_steps=2 format=3 uid="uid://ryep0owrcbfi"]

[ext_resource type="Script" path="res://mod/ecorebirth/scripts/main_menu.gd" id="1_h5yn5"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_h5yn5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="ButtonBox" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SinglePlay" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/ButtonBox"]
unique_name_in_owner = true
layout_mode = 2
text = "开始游戏"

[node name="MultiPlay" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/ButtonBox"]
unique_name_in_owner = true
layout_mode = 2
text = "多人游戏"

[node name="Setting" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/ButtonBox"]
unique_name_in_owner = true
layout_mode = 2
text = "设置"

[node name="Exit" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/ButtonBox"]
unique_name_in_owner = true
layout_mode = 2
text = "退出"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/VBoxContainer/ButtonBox/SinglePlay" to="." method="_on_single_play_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/ButtonBox/SinglePlay" to="." method="_on_single_play_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/VBoxContainer/ButtonBox/MultiPlay" to="." method="_on_multi_play_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/ButtonBox/MultiPlay" to="." method="_on_multi_play_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/VBoxContainer/ButtonBox/Setting" to="." method="_on_setting_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/ButtonBox/Setting" to="." method="_on_setting_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/VBoxContainer/ButtonBox/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/ButtonBox/Exit" to="." method="_on_exit_pressed"]
